// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Banner defaults to error mode 1`] = `
<div>
  <div
    class="flex banner mode"
  >
    <div
      class="message"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root-1 icon"
        focusable="false"
        role="presentation"
        viewBox="0 0 24 24"
      >
        <path
          d="M0 0h24v24H0z"
          fill="none"
        />
        <path
          d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-2h2v2zm0-4h-2V7h2v6z"
        />
      </svg>
      Some message
    </div>
    <div
      class="flex"
    />
  </div>
</div>
`;

exports[`Banner shows "Details" button and has dialog when there is additional info 1`] = `
<div>
  <div
    class="flex banner mode"
  >
    <div
      class="message"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root-37 icon"
        focusable="false"
        role="presentation"
        viewBox="0 0 24 24"
      >
        <path
          d="M0 0h24v24H0z"
          fill="none"
        />
        <path
          d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-2h2v2zm0-4h-2V7h2v6z"
        />
      </svg>
      Some message
    </div>
    <div
      class="flex"
    >
      <button
        class="MuiButtonBase-root-72 MuiButton-root-46 MuiButton-text-48 MuiButton-flat-51 button detailsButton"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiButton-label-47"
        >
          Details
        </span>
        <span
          class="MuiTouchRipple-root-91"
        />
      </button>
    </div>
  </div>
</div>
`;

exports[`Banner shows "Refresh" button when passed a refresh function 1`] = `
<div>
  <div
    class="flex banner mode"
  >
    <div
      class="message"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root-98 icon"
        focusable="false"
        role="presentation"
        viewBox="0 0 24 24"
      >
        <path
          d="M0 0h24v24H0z"
          fill="none"
        />
        <path
          d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-2h2v2zm0-4h-2V7h2v6z"
        />
      </svg>
      Some message
    </div>
    <div
      class="flex"
    >
      <button
        class="MuiButtonBase-root-133 MuiButton-root-107 MuiButton-text-109 MuiButton-flat-112 button refreshButton"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiButton-label-108"
        >
          Refresh
        </span>
        <span
          class="MuiTouchRipple-root-136"
        />
      </button>
    </div>
  </div>
</div>
`;

exports[`Banner shows troubleshooting link instructed by prop 1`] = `
<div>
  <div
    class="flex banner mode"
  >
    <div
      class="message"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root-152 icon"
        focusable="false"
        role="presentation"
        viewBox="0 0 24 24"
      >
        <path
          d="M0 0h24v24H0z"
          fill="none"
        />
        <path
          d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-2h2v2zm0-4h-2V7h2v6z"
        />
      </svg>
      Some message
    </div>
    <div
      class="flex"
    >
      <a
        class="troubleShootingLink"
        href="https://www.kubeflow.org/docs/pipelines/troubleshooting"
      >
        Troubleshooting guide
      </a>
    </div>
  </div>
</div>
`;

exports[`Banner uses error mode when instructed 1`] = `
<div>
  <div
    class="flex banner mode"
  >
    <div
      class="message"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root-10 icon"
        focusable="false"
        role="presentation"
        viewBox="0 0 24 24"
      >
        <path
          d="M0 0h24v24H0z"
          fill="none"
        />
        <path
          d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-2h2v2zm0-4h-2V7h2v6z"
        />
      </svg>
      Some message
    </div>
    <div
      class="flex"
    />
  </div>
</div>
`;

exports[`Banner uses info mode when instructed 1`] = `
<div>
  <div
    class="flex banner mode"
  >
    <div
      class="message"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root-28 icon"
        focusable="false"
        role="presentation"
        viewBox="0 0 24 24"
      >
        <path
          d="M0 0h24v24H0z"
          fill="none"
        />
        <path
          d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-6h2v6zm0-8h-2V7h2v2z"
        />
      </svg>
      Some message
    </div>
    <div
      class="flex"
    />
  </div>
</div>
`;

exports[`Banner uses warning mode when instructed 1`] = `
<div>
  <div
    class="flex banner mode"
  >
    <div
      class="message"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root-19 icon"
        focusable="false"
        role="presentation"
        viewBox="0 0 24 24"
      >
        <path
          d="M0 0h24v24H0z"
          fill="none"
        />
        <path
          d="M1 21h22L12 2 1 21zm12-3h-2v-2h2v2zm0-4h-2v-4h2v4z"
        />
      </svg>
      Some message
    </div>
    <div
      class="flex"
    />
  </div>
</div>
`;
